[project]
name = "notification-pusher"
version = "0.1.0"
description = "Production-grade notification microservice with FastAPI, WebSockets, PostgreSQL, Redis, and Admin Dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "python-socketio>=5.11.1",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.28",
    "psycopg2-binary>=2.9.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
]
